Bug 791501 - Default Programs UI should select Firefox by default. r=jimm, a=lmandel